# ai-terminal-assistant

./: .gitignore  AI终端助手 (ATA).md  LICENSE  Makefile  README.md  __init__.py  config.json  config.yaml  config.yaml.template  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  todo.md  tox.ini
ata/: __init__.py  __main__.py  ai_interface.py  app.py  cli.py  command_executor.py  config_manager.py  default_config.yaml  exceptions.py  main.py  system_monitor.py  web_server.py
ata/api/: __init__.py  ai_execute.py  config_api.py  connection_test.py  execute.py  os_info.py  settings.py  status.py  system_info.py
ata/config/: __init__.py  config.yaml  logging.yaml
docs/: AI终端助手优化项目总结.md  AI终端助手项目总结.md  CHANGELOG.md  api_reference.md  deepseek_research.md  design_document.md  developer_guide.md  faq.md  feasibility_analysis.md  installation.md  technical_specs.md  user_manual.md
examples/: coverage.xml  mock_test.py  project_structure.md  simple_demo.py
tests/: README.md  __init__.py  conftest.py  test_ai_interface.py  test_cli.py  test_command_executor.py  test_config_manager.py
web/: App.vue  components.d.ts  index.html  main.js  package-lock.json  package.json  router.js  vite.config.js
web/components/: ConnectionTest.vue  Settings.vue  SystemInfo.vue  Terminal.vue
web/src/: App.vue  main.js
web/src/assets/: main.css
web/src/components/: Settings.vue  SettingsDialog.vue  SystemInfo.vue  SystemMonitor.vue  TerminalPanel.vue
web/src/config/: api.js
web/src/directives/: index.js
web/src/layouts/: MainLayout.vue
web/src/router/: index.js
web/src/store/: index.js
(+15 files in other folders)
